# aibot-python-sdk

./: .env.example  .gitignore  README.md  pyproject.toml  test_upload_file.py  testfile.xlsx
src/wecom_aibot/: __init__.py  api_client.py  client.py  crypto.py  exceptions.py  logger.py  message_handler.py  utils.py  ws_manager.py
src/wecom_aibot/types/: __init__.py  api.py  config.py  event.py  message.py  template_card.py
tests/: test_upload_types.py
